03-gitops/archive/vault/vault-ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: vault-ui
#  namespace: vault
#  annotations:
#    cert-manager.io/cluster-issuer: ingress
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: vault.cluster
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: vault
#                port:
#                  number: 8200
#  tls:
#    - hosts:
#        - vault.cluster
#      secretName: vault-tls
#---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-public-ui
  namespace: vault
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://oauth.serhii.link/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.serhii.link/oauth2/start?rd=https://$host$request_uri"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: vault.serhii.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
